# redteam-harness

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
redteam_harness/: __init__.py  cli.py  harness.py  scorecard.py  types.py
redteam_harness/attacks/: __init__.py  library.py  mutations.py
redteam_harness/defenses/: __init__.py  base.py  hardener.py  output_filter.py  pipeline.py  sanitizer.py
redteam_harness/judges/: __init__.py  base.py  heuristic.py  llm_judge.py
redteam_harness/targets/: __init__.py  anthropic_target.py  base.py  mock.py  openai_target.py
tests/: test_attacks.py  test_defenses.py  test_harness.py  test_scorecard_and_cli.py  test_targets_and_judges.py
